# open-ingredients

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26a32f08ced0_add_user_password_hash.py  8d7471740d8f_initial_empty.py  9b10a0b522c4_make_user_tenant_optional.py
app/: db.py  main.py  models.py  security.py
app/api/: auth.py
app/schemas/: __init__.py  auth.py
docs/: adr.md  architecture.md  commit-checklist.md  database.md  roadmap.md
scripts/: ci-local-check.sh  ci-quick-check.sh
tests/: test_auth_login.py  test_auth_me.py  test_auth_register.py  test_auth_schemas.py  test_security.py  test_user_role_constraints.py
