[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openingredients"
version = "0.1.0"
description = "OpenIngredients API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.18.0",
  "pytest>=9.0.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
